Complete main layout

--- a/index-2.html
+++ b/index-2.html
@@ -56,7 +56,7 @@
                         <div class="project">
                             <div class="project-text">
                                 <p>Super Cool Project</p>
-                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
+                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
                             </div>
 
                             <div class="project-buttons">
@@ -69,7 +69,7 @@
                         <div class="project">
                             <div class="project-text">
                                 <p>Impossible App</p>
-                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
+                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
                             </div>
 
                             <div class="project-buttons">
@@ -82,7 +82,7 @@
                         <div class="project">
                             <div class="project-text">
                                 <p>Ad Blocker</p>
-                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
+                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
                             </div>
 
                             <div class="project-buttons">
@@ -95,7 +95,7 @@
                         <div class="project">
                             <div class="project-text">
                                 <p>Less Cool Project</p>
-                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
+                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
                             </div>
 
                             <div class="project-buttons">
@@ -108,7 +108,7 @@
                         <div class="project">
                             <div class="project-text">
                                 <p>Easy Peasy App</p>
-                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
+                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
                             </div>
 
                             <div class="project-buttons">
@@ -121,7 +121,7 @@
                         <div class="project">
                             <div class="project-text">
                                 <p>Money Maker</p>
-                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
+                                <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
                             </div>
                             <div class="project-buttons">
                                 <button>button</button>
@@ -137,13 +137,43 @@
                 <div class="main-ann">
                     <div class="heading-ann">Announcements</div>
                     <div class="announcements">
-                        BB
+                        <div class="ann">
+                            <p>Site Maintainance</p>
+                            <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
+                        </div>
+                        <div class="ann">
+                            <p>Community Share Day</p>
+                            <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
+                        </div>
+                        <div class="ann">
+                            <p>Updated Privacy Policy</p>
+                            <p>Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.Dummy Text.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="main-trend">
                     <div class="heading-trend">Trending</div>
                     <div class="trending">
-                        CC
+                        <div class="trend">
+                            <img src="./assets/svg-icons/carrot-svgrepo-com.svg" alt="img" class="user-pic">
+                            <p class="user-id">@tegan</p>
+                            <p class="user-text">World Peace Builder</p>
+                        </div>
+                        <div class="trend">
+                            <img src="./assets/svg-icons/ice-cream-svgrepo-com.svg" alt="img" class="user-pic">
+                            <p class="user-id">@morgan</p>
+                            <p class="user-text">Super Cool Project</p>
+                        </div>
+                        <div class="trend">
+                            <img src="./assets/svg-icons/pizza-svgrepo-com.svg" alt="img" class="user-pic">
+                            <p class="user-id">@kendall</p>
+                            <p class="user-text">Life Changing App</p>
+                        </div>
+                        <div class="trend">
+                            <img src="./assets/svg-icons/prickly-pear-svgrepo-com.svg" alt="img" class="user-pic">
+                            <p class="user-id">@alex</p>
+                            <p class="user-text">No Traffic Maker</p>
+                        </div>
                     </div>
                 </div>
             </div>
